# Alz_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  feature_extractor.py  main.py  preprocess.py  pyproject.toml
data/: feature_selection.json  symmetry_all_pairs.csv  xgb_6qds_model.json  xgb_vggface_model.json
